[gd_scene load_steps=19 format=3 uid="uid://brrci6s4t1r6c"]

[ext_resource type="Script" path="res://scripts/audio.gd" id="1_1qj1d"]
[ext_resource type="AudioStream" uid="uid://bfq2hfwdn18rv" path="res://assets/audio/box_break3.wav" id="2_owf8s"]
[ext_resource type="AudioStream" uid="uid://d2l6ymesk083i" path="res://assets/audio/metal_break2.wav" id="3_15in1"]
[ext_resource type="AudioStream" uid="uid://t2enbvyxldl" path="res://assets/audio/plasma_pistol4.wav" id="4_k5fku"]
[ext_resource type="AudioStream" uid="uid://d2uuwh0r6hw8u" path="res://assets/audio/plasma_rifle3.wav" id="5_8unwr"]
[ext_resource type="AudioStream" uid="uid://do5glc5k5uttq" path="res://assets/audio/bullet_hit.wav" id="6_66jax"]
[ext_resource type="AudioStream" uid="uid://b6v3cyfjwn0mm" path="res://assets/audio/enemy_rifle_shot.wav" id="7_h843s"]
[ext_resource type="AudioStream" uid="uid://cculqinslcbgu" path="res://assets/audio/enemy_biggun_shot.wav" id="8_qy76s"]
[ext_resource type="AudioStream" uid="uid://c52tdvtm74myw" path="res://assets/audio/explosion.wav" id="9_xpthi"]
[ext_resource type="AudioStream" uid="uid://bb2v6yc30sss2" path="res://assets/audio/click.wav" id="10_ctkq8"]
[ext_resource type="AudioStream" uid="uid://e7ovp4h2ijhf" path="res://assets/audio/enemy_rifle_reload.wav" id="10_djfa3"]
[ext_resource type="AudioStream" uid="uid://du5wr8xyas7r" path="res://assets/audio/checkpoint_activation.wav" id="11_kg60d"]
[ext_resource type="AudioStream" uid="uid://bi8hxp1ms1npr" path="res://assets/audio/dash.wav" id="12_ggwt8"]
[ext_resource type="AudioStream" uid="uid://dsk08py10wuw2" path="res://assets/audio/plasma_reload.wav" id="13_1y7es"]
[ext_resource type="AudioStream" uid="uid://cwlmqdlo7ad1i" path="res://assets/audio/slash.wav" id="14_nk3hp"]
[ext_resource type="AudioStream" uid="uid://jogok1byk8fc" path="res://assets/audio/pickup_ammo.wav" id="16_8h0gf"]
[ext_resource type="AudioStream" uid="uid://brwr2va468ow1" path="res://assets/audio/pickup_material.wav" id="17_ps06j"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gjd3f"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("8_qy76s")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_h843s")
stream_1/weight = 1.0

[node name="Audio" type="Node"]
script = ExtResource("1_1qj1d")

[node name="box_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_owf8s")
bus = &"SFX"

[node name="metal_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_15in1")
volume_db = -10.0
bus = &"SFX"

[node name="plasma_pistol_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_k5fku")
volume_db = -5.0
bus = &"SFX"

[node name="plasma_rifle_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8unwr")
volume_db = -5.0
bus = &"SFX"

[node name="plasma_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_1y7es")
volume_db = -5.0
bus = &"SFX"

[node name="bullet_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_66jax")
volume_db = -5.0
bus = &"SFX"

[node name="enemy_shoot" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_gjd3f")
volume_db = -10.0
bus = &"SFX"

[node name="enemy_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_djfa3")
volume_db = -15.0
bus = &"SFX"

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xpthi")
volume_db = -5.0
bus = &"SFX"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ctkq8")
volume_db = -5.0
bus = &"SFX"

[node name="checkpoint_activation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_kg60d")
bus = &"SFX"

[node name="dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ggwt8")
volume_db = -15.0
bus = &"SFX"

[node name="slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_nk3hp")
volume_db = -20.0
bus = &"SFX"

[node name="pickup_ammo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_8h0gf")
bus = &"SFX"

[node name="pickup_material" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_ps06j")
volume_db = -10.0
bus = &"SFX"
